--- a/app/src/main/res/menu/fragment_photo_gallery.xml
+++ b/app/src/main/res/menu/fragment_photo_gallery.xml
@@ -11,4 +11,9 @@
         android:id="@+id/app_bar_clear_search"
         android:title="@string/clear_search"
         app:showAsAction="never" />
+
+    <item
+        android:id="@+id/app_bar_toggle_polling"
+        android:title="@string/start_polling"
+        app:showAsAction="never" />
 </menu>
